fix: adjusted left edge of infobox component to align with content

--- a/Childrens-Social-Care-CPD/styles/scss/overrides/_site.scss
+++ b/Childrens-Social-Care-CPD/styles/scss/overrides/_site.scss
@@ -299,10 +299,14 @@
 .infobox {
     background: #ebf2f6;
     border-top: #347ca9 solid 10px;
-    margin: 25px 0;
+    margin: 25px 0 25px 15px;
     padding-left: 20px;
     padding-right: 20px;
     position: relative;
+}
+
+div.infobox-width-container {
+    margin-left: 0;
 }
 
 .infobox-green-brain {
