--- a/Childrens-Social-Care-CPD/wwwroot/css/application.css
+++ b/Childrens-Social-Care-CPD/wwwroot/css/application.css
@@ -11734,10 +11734,14 @@ CONTENT TITLE BANNER
 .infobox {
   background: #ebf2f6;
   border-top: #347ca9 solid 10px;
-  margin: 25px 0;
+  margin: 25px 0 25px 15px;
   padding-left: 20px;
   padding-right: 20px;
   position: relative;
+}
+
+div.infobox-width-container {
+  margin-left: 0;
 }
 
 .infobox-green-brain {
